<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".albums.create.AlbumCreateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/albumName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:hint="@string/name_album"/>

        <EditText
            android:id="@+id/albumUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:hint="@string/url_album" />

        <EditText
            android:id="@+id/albumDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:hint="@string/date_album" />

        <EditText
            android:id="@+id/albumDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:hint="@string/description_album" />

        <EditText
            android:id="@+id/albumGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:hint="@string/gender_album" />

        <EditText
            android:id="@+id/albumSeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:hint="@string/seal_album" />

        <Button
            android:id="@+id/albumSaveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_album" />
    </LinearLayout>

</FrameLayout>