<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_albums">

    <fragment
        android:id="@+id/navigation_albums"
        android:name="com.vinyls.albums.list.AlbumsListFragment"
        android:label="@string/title_albums"
        tools:layout="@layout/fragment_albums_list" />

    <fragment
        android:id="@+id/navigation_performers"
        android:name="com.vinyls.performers.PerformersFragment"
        android:label="@string/title_performers"
        tools:layout="@layout/fragment_performers" />

    <fragment
        android:id="@+id/navigation_collectors"
        android:name="com.vinyls.collectors.list.CollectorListFragment"
        android:label="@string/title_collectors"
        tools:layout="@layout/fragment_collector_list" />
</navigation>